--- a/src/styles/Catalog.css
+++ b/src/styles/Catalog.css
@@ -1,11 +1,11 @@
 
-#all-movies {
+/* #all-movies {
     height: 100vh;
 display: grid;
 grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
     
-}
+} */
 /* 
 #rented-movies {
     height: 100vh;
